fix(auth): - reintroduce student program - fix NPE on oauth2 login