@@ -1,8 +1,5 @@
 package com.bbmovie.auth.dto.response;
 
-import com.bbmovie.auth.entity.University;
-import org.springframework.data.domain.Page;
-
 import java.util.Collections;
 import java.util.List;
 
@@ -12,21 +9,12 @@ public record UniversityLookupResponse(
     List<String> domains,
     boolean supported
 ) {
-    public static UniversityLookupResponse from(University u) {
+    public static UniversityLookupResponse from(String name, String country, String domain) {
         return new UniversityLookupResponse(
-            u.getName(),
-            u.getCountry(),
-           Collections.singletonList(u.getDomains()),
+            name,
+            country,
+            domain == null ? List.of() : Collections.singletonList(domain),
             true
         );
-    }
-
-    public static Page<UniversityLookupResponse> fromPage(Page<University> universities) {
-        return universities.map(u -> new UniversityLookupResponse(
-            u.getName(),
-            u.getCountry(),
-            Collections.singletonList(u.getDomains()),
-            true
-        ));
     }
 }
